--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 numpy>=1.16.4,<2
 scipy>=1.1.0,<2
 scikit-image>=0.14.1,<0.17.0
-tensorflow>=1.14.0,<2
+tensorflow==2.4.1
 deepcell-toolbox>=0.5.0
 keras-applications>=1.0.8
