--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy>=1.16.4,<2
+numpy>=1.16.4,<1.20.0
 scipy>=1.1.0,<2
-scikit-image>=0.14.1,<0.17.0
-tensorflow==2.4.1
+scikit-image>=0.14.1
+deepcell==0.8.4
+tensorflow==2.3.1
 deepcell-toolbox>=0.5.0
-keras-applications>=1.0.8
