--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 numpy>=1.16.4,<1.20.0
 scipy>=1.1.0,<2
 scikit-image>=0.14.1
+opencv-python-headless<5
 deepcell==0.8.4
 tensorflow==2.3.1
 deepcell-toolbox>=0.5.0
