--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -21,13 +21,22 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-        cache: pip
-        cache-dependency-path: setup.py
+
+    - name: Cache pip
+      uses: actions/cache@v2
+      with:
+        # This path is specific to Ubuntu
+        path: ~/.cache/pip
+        # Look to see if there is a cache hit for the corresponding requirements file
+        key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+          ${{ runner.os }}-
 
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install .[tests] coveralls
+        python -m pip install --upgrade pip wheel setuptools
+        pip install .[tests] coveralls
 
     - name: PyTest
       run: |
